# lope

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  gemini-extension.json  install  pyproject.toml
.claude-plugin/: plugin.json
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.github/workflows/: publish.yml
.opencode/: INSTALL.md
commands/lope/: ask.toml  audit.toml  compare.toml  deliberate.toml  execute.toml  help.toml  memory.toml  negotiate.toml  pipe.toml  review.toml  team.toml  vote.toml
commands/opencode/: lope-ask.md  lope-audit.md  lope-compare.md  lope-deliberate.md  lope-execute.md  lope-help.md  lope-memory.md  lope-negotiate.md  lope-pipe.md  lope-review.md  lope-team.md  lope-vote.md  lope.md  using-lope.md
docs/: ARCHITECTURE.md  RELEASING.md  ci.md  deliberation.md  makakoo.md  memory.md  reference.md  samples.md
hooks/: hooks-cursor.json  session-start
lope/: __init__.py  __main__.py  auditor.py  caveman.py  cli.py  cli_discovery.py  config.py  curl_parser.py  deliberation.py  divide.py  ensemble.py  executor.py  exporters.py  findings.py  gates.py  generic_validators.py  healer.py  journal.py  logo.py  makakoo_adapter.py  makakoo_bridge.py  memory.py  models.py  negotiator.py  output.py  redaction.py  review.py  runlock.py  sarif.py  selector.py  synthesis.py  validators.py
scripts/: bump-version.sh  check-version.sh
skills/lope-ask/: SKILL.md
skills/lope-audit/: SKILL.md
skills/lope-compare/: SKILL.md
skills/lope-deliberate/: SKILL.md
skills/lope-execute/: SKILL.md
tests/: test_atomic_writes.py  test_codex_compat.py  test_config_layered.py  test_curl_parser.py  test_deliberation.py  test_divide.py  test_execute_gates.py  test_exporters.py  test_findings.py  test_gates.py  test_journal.py  test_makakoo_adapter.py  test_makakoo_bridge.py  test_memory.py  test_negotiator_timeout.py  test_new_verbs.py  test_opencode_extract.py  test_redaction.py  test_release_criteria.py  test_review_consensus.py  test_runlock.py  test_sarif.py  test_self_heal.py  test_synthesis.py  test_team.py
(+14 files in other folders)
