[project]
name = "lope-agent"
version = "0.6.1"
description = "Multi-CLI validator ensemble for AI work — sprint mode (negotiate/execute/audit), single-shot verbs (ask/review/vote/compare/pipe), natural-language roster management (team), and paste-a-curl onboarding for any AI API. Any AI CLI implements; any AI CLI validates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Sebastian Schkudlara" },
]
keywords = ["ai", "agent", "sprint", "validation", "ensemble", "cli", "claude", "gemini", "codex", "opencode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
lope = "lope.cli:main"

[project.urls]
Homepage = "https://github.com/traylinx/lope"
Repository = "https://github.com/traylinx/lope"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
